# dhcp-manager

./: CHANGELOG.md  README.md  configure.ac
.github/: CODEOWNERS
config/: CcspDHCPMgr.service  DHCPMgrPSMValueCheck.sh  TR181-DHCPMgr.XML  notify.sh
docs/: README.md  configuration-guide.md
docs/api/: README.md
docs/architecture/: component-diagram.md
docs/components/: lease-handlers.md  lease-monitor.md  main-controller.md  mapt-apis.md  recovery-handler.md
source/DHCPClientUtils/DHCPv4Client/: .dhcp_client_common.c.swp  dhcp_client_common.c  dhcpv4_interface.h  dhcpv4_interface_udhcpc.c
source/DHCPClientUtils/DHCPv4Client/dhcpmgr_udhcpc_plugin/: dhcpmgr_udhcpc.c  udhcpc_msg.h
source/DHCPClientUtils/DHCPv4Client/include/: dhcp_client_common_utils.h
source/DHCPClientUtils/DHCPv6Client/: dhcpv6_interface.h  dhcpv6_interface_dibbler.c
source/DHCPClientUtils/DHCPv6Client/dhcpmgr_dibbler_plugin/: dhcpmgr_dibbler_plugin.c
source/DHCPMgrInterface/: ifl.c
source/DHCPMgrSsp/: Makefile.am  ssp_main.c
source/DHCPMgrUtils/: Makefile.am  dhcp_lease_monitor_thrd.c  dhcpmgr_controller.c  dhcpmgr_map_apis.c  dhcpmgr_map_apis.h  dhcpmgr_recovery_handler.c  dhcpmgr_v4_lease_handler.c  dhcpmgr_v6_lease_handler.c
source/DHCPMgrUtils/CustomOptions/: Makefile.am  dhcpmgr_custom_options.c  dhcpmgr_custom_options.h  dhcpmgr_voice_custom_options.c
source/DHCPServerUtils/: Makefile.am
source/DHCPServerUtils/DHCPv4Server/: dhcp_server_functions.c
source/DHCPServerUtils/DHCPv6Server/: Makefile.am  dhcpv6server_function.c  service_ipv6.c
source/DHCPServerUtils/SM_DHCPServer/: Makefile.am  Makefile.in  sm_DhcpMgr.c  sm_DhcpMgr.h  sm_DhcpMgr_apis.c  sm_DhcpMgr_main.c
source/DHCPServerUtils/utils/: util.c
source/TR-181/board_sbapi/: Makefile.am  cosa_dhcpv4_apis.c  cosa_dhcpv6_apis.c
source/TR-181/include/: cosa_apis_util.h  cosa_dhcpv6_apis.h
source/TR-181/middle_layer_src/: Makefile.am  cosa_apis_util.c  cosa_dhcpv4_dml.c  cosa_dhcpv6_dml.c  cosa_dhcpv6_dml.h  dhcpmgr_rbus_apis.c  dhcpmgr_rbus_apis.h  plugin_main.c
